--- a/style.css
+++ b/style.css
@@ -1,53 +1,3 @@
-body {
-	font-family: 'Special Elite', cursive;
-	background: #f5dbda;
-}
-.header_div {
-	background: white;
-	color: #ce2700;
-}
-.header_div img {
-	width: 100px;
-}
-.main_div {
-	background: #ffd2c7;
-	padding: 10px;
-	margin-top: 15px;
-	border: 3px solid white;
-}
-.main_div label {
-	background: white;
-	width: 310px;
-	padding: 10px;
-	margin-bottom: 0px;
-	box-shadow: 50px rgb(28, 238, 9);
-}
-#camera,
-#result {
-	border: 2px solid white;
-	width: 310px;
-	height: 300px;
-	box-shadow: 5px 5px 18px rgb(105, 16, 189);
-}
-.main_div button {
-	width: 310px;
-	font-size: 16px;
-	box-shadow: 5px 5px 18px rgb(161, 5, 83);
-	border: 1px solid;
-}
-.footer_div {
-	margin-bottom: 50px;
-}
-
-.footer_div h4 {
-	background: rgb(203, 241, 230);
-	border-radius: 10px;
-	padding: 5px;
-	box-shadow: 5px 5px 18px rgb(28, 212, 68);
-}
-.footer_div img {
-	width: 70px;
-}
 .copy_right_footer {
 	position: fixed;
 	color: #6c757d;
@@ -56,4 +6,47 @@ body {
 	background-color: #f5f5f5;
 	line-height: 3;
 	text-align: center;
+	font-family: 'Special Elite', cursive;
+}
+
+span {
+	color: red;
+	font-size: 16px;
+}
+li img {
+	width: 200px;
+	border-radius: 20px;
+}
+.bob {
+	background: #f8aaaa;
+	padding: 30px;
+	border-radius: 20px;
+	width: 50%;
+	display: inline-block;
+	box-shadow: 5px 5px 18px snow;
+}
+b {
+	color: purple;
+}
+
+.bob3 {
+	text-align: center;
+	background: #dedddd;
+	border-radius: 20px;
+	padding: 10px;
+	box-shadow: 5px 5px 18px snow;
+}
+
+body {
+	margin: 10px;
+	background-image: linear-gradient(
+		to left top,
+		red,
+		orange,
+		rgb(255, 255, 0),
+		lightgreen,
+		rgb(0, 183, 255),
+		rgb(148, 0, 253),
+		violet
+	);
 }
